<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="password1"
            type="String" />

        <variable
            name="password2"
            type="String" />

        <variable
            name="onClick"
            type="com.yiande.jxjxc.myInterface.EventSendData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.AmendPasswordActivity">

        <com.mylibrary.api.widget.TopView
            android:id="@+id/amendPassword_Top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/topHight"
            android:background="@drawable/top_background"
            app:attr_Title="@string/amend_password" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">


                <com.yiande.jxjxc.view.ItemTextView
                    android:id="@+id/amendPassword_Name"
                    style="@style/LayoutStyle"
                    app:title="@string/user_name" />

                <com.yiande.jxjxc.view.ItemTextView
                    android:id="@+id/amendPassword_Mob"
                    style="@style/LayoutStyle"
                    app:title="@string/mob" />

                <com.yiande.jxjxc.view.EditItemView
                    android:id="@+id/amendPassword_1"
                    style="@style/LayoutStyle"
                    android:hint="@string/intput_password"
                    android:inputType="textPassword"
                    app:setEditText="@={password1}"
                    app:title="@string/password" />


                <com.yiande.jxjxc.view.EditItemView
                    android:id="@+id/amendPassword_2"
                    style="@style/LayoutStyle"
                    android:hint="@string/intput_confrim_password"
                    android:inputType="textPassword"
                    app:setEditText="@={password2}"
                    app:title="@string/confrim_password" />

                <Button
                    style="@style/buttonStyle"
                    android:layout_marginTop="60dp"
                    android:onClick="@{()->onClick.transform(password1,password2)}" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>